# cookiecutter-python-ai

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .cursorrules  .gitignore  .gitmessage  AGENTS.md  CLAUDE.md  DEVELOPERS.md  PR_CHECKLIST.md  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.claude/commands/: develop.md  explore.md  issue.md  respond.md  submit.md
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/docs/coding-agents/: DEVELOPMENT.md  PLANNING.md  SUBMISSION.md
{{cookiecutter.project_slug}}/scripts/: check
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  config.py
{{cookiecutter.project_slug}}/tests/: __init__.py  conftest.py
{{cookiecutter.project_slug}}/tests/static/: test_pyright.py  test_ruff.py
